[package]
name = "syntaur-privacy"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Smart-device privacy + lockdown plumbing for Syntaur. Privacy tier (DNS sinkhole + per-device policy + monitoring) ships standalone; Lockdown tier (L3 gateway + nft + DHCP) is gated on dedicated-hardware deploy. See projects/syntaur_privacy_mode."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
hickory-server = { version = "0.24", default-features = false, features = ["resolver"] }
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
hickory-proto = { version = "0.24", default-features = false }
globset = "0.4"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-test = "0.4"
